fix: 피드백 반영 - redis 키 값 없을 시 빈 큐 반환 - 당첨자 선정 알고리즘 큐로 사용하게끔 수정